--- a/package.json
+++ b/package.json
@@ -2,29 +2,42 @@
   "name": "jara",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
-    "graphql": "^16.5.0",
-    "graphql-request": "^4.3.0",
-    "html-react-parser": "^1.4.14",
-    "moment": "^2.29.3",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-multi-carousel": "^2.8.0",
-    "sass": "^1.52.3"
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
-    "babel-loader": "^8.2.5",
-    "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.0"
+    "tailwindcss": "^3.1.2"
   }
 }
